[web] Prevent changing the only admin role in a community
Summary:
We need to prevent the only admin from removing themselves as `Admins` in a community. Based on the designs, we should display an error in the modal indicating why the saved role changes failed.

https://linear.app/comm/issue/ENG-4041/prevent-changing-the-only-admin-role-in-a-community

Depends on D8140

Test Plan: Please see the video below covering the cases of changing the only admin role

Reviewers: atul, ginsu

Subscribers: ashoat, tomek

Differential Revision: https://phab.comm.dev/D8141

--- a/web/modals/threads/members/change-member-role-modal.css
+++ b/web/modals/threads/members/change-member-role-modal.css
@@ -48,3 +48,9 @@
 .roleModalBackButton {
   padding: 14px 32px;
 }
+
+.roleModalErrorMessage {
+  color: var(--error);
+  display: flex;
+  justify-content: center;
+}
